--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,12 +1,6 @@
 <div class="col-lg-4">
-  <div class="widget search-box">
-    <form action="{{ site.BaseURL }}/search">
-      <i class="ti-search"></i>
-      <input class="form-control border-0 pl-5" type="search" placeholder="Search" id="search-query" name="s">
-    </form>
-  </div>
-  <div class="widget">
-    <h6 class="mb-4">LATEST POST</h6>
+   <div class="widget">
+    <h6 class="mb-4">Publicaciones</h6>
     {{ range first 3 ( where site.Pages "Type" "post") }}
     <div class="media mb-4">
       <div class="post-thumb-sm mr-3">
@@ -23,7 +17,7 @@
     {{ end }}
   </div>
   <div class="widget">
-    <h6 class="mb-4">TAG</h6>
+    <h6 class="mb-4">Marcas</h6>
     {{- if isset site.Taxonomies "tags" }}
     {{- if not (eq (len site.Taxonomies.tags) 0) }}
     <ul class="list-inline tag-list">
@@ -35,7 +29,7 @@
     {{- end }}
   </div>
   <div class="widget">
-    <h6 class="mb-4">CATEGORIES</h6>
+    <h6 class="mb-4">CategoriasS</h6>
     {{- if isset site.Taxonomies "categories" }}
     {{- if not (eq (len site.Taxonomies.categories) 0) }}
     <ul class="list-inline tag-list">
