--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -25,7 +25,7 @@
     {{- end }}
   </div>
   <div class="widget">
-    <h6 class="mb-4">CategoriasS</h6>
+    <h6 class="mb-4">Categorias</h6>
     {{- if isset site.Taxonomies "categories" }}
     {{- if not (eq (len site.Taxonomies.categories) 0) }}
     <ul class="list-inline tag-list">
