--- a/layouts/homepage/single.html
+++ b/layouts/homepage/single.html
@@ -34,7 +34,7 @@
         <h1 class="mb-0">Welcome</h1>
         <h2 class="mb-100 title-border-lg">to <i>{{site.Params.author}} Blog</i></h2>
         <p class="mb-80 mr-5">{{site.Params.bio | markdownify }}</p>
-        <span class="font-secondary text-dark mr-3 mr-sm-5">Follow me :</span>
+        <span class="font-secondary text-dark mr-3 mr-sm-5">Seguir :</span>
         <ul class="list-inline d-inline-block mb-5">
           {{ range site.Params.social }}
           <li class="list-inline-item mx-3"><a href="{{.URL}}" class="text-dark"><i class="{{.icon}}"></i></a></li>
@@ -69,7 +69,7 @@
           <p class="text-uppercase mb-2">{{range .Params.Categories}}{{. | humanize}}{{end}}</p>
           <h4 class="title-border"><a class="text-dark" href="{{.Permalink}}">{{.Title}}</a></h4>
           <p>{{.Summary}}</p>
-          <a href="{{.Permalink}}" class="btn btn-transparent">read more</a>
+          <a href="{{.Permalink}}" class="btn btn-transparent">Leer más</a>
         </article>
       </div>
       {{ end }}
@@ -87,12 +87,11 @@
           </div>
           <div class="post-content">
             <ul class="list-inline d-flex justify-content-between border-bottom post-meta pb-2 mb-4">
-              <li class="list-inline-item"><i class="ti-calendar mr-2"></i>{{ .PublishDate.Format "Jan 02, 2006" }}</li>
-              <li class="list-inline-item"><i class="ti-alarm-clock mr-2"></i><span class="eta"></span> read</li>
+            
             </ul>
             <h4 class="mb-4"><a href="{{.Permalink}}" class="text-dark">{{ .Title }}</a></h4>
             <p class="mb-0 post-summary">{{.Summary }}</p>
-            <a class="btn btn-transparent mb-4" href="{{.Permalink}}">Continue...</a>
+            <a class="btn btn-transparent mb-4" href="{{.Permalink}}">Continuar...</a>
           </div>
         </article>
       </div>
