--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,7 +7,7 @@
         </div>
         <div class="col-md-3 col-sm-6 mb-4 mb-md-0">
           {{ if .Site.Params.address }}
-          <h6>Address</h6>
+          <h6>Ubicación</h6>
           <ul class="list-unstyled">
             <li class="font-secondary text-dark">{{site.Params.address | markdownify }}</li>
           </ul>
@@ -15,7 +15,7 @@
         </div>
         <div class="col-md-3 col-sm-6 mb-4 mb-md-0">
           {{ if or  .Site.Params.mobile  .Site.Params.email }}         
-          <h6>Contact Info</h6>
+          <h6>Contacto</h6>
           <ul class="list-unstyled">
             {{ if .Site.Params.mobile }}
             <li class="font-secondary text-dark">Tel : {{ .Site.Params.mobile | markdownify }}</li>
@@ -27,7 +27,7 @@
           {{ end }}
         </div>
         <div class="col-md-3 col-sm-6 mb-4 mb-md-0">
-          <h6>Follow</h6>
+          <h6>Seguir</h6>
           <ul class="list-inline d-inline-block">
             {{ range site.Params.social }}
             <li class="list-inline-item"><a href="{{ .link | safeURL }}" class="text-dark"><i class="{{ .icon }}"></i></a></li>
