--- a/layouts/index.html
+++ b/layouts/index.html
@@ -70,7 +70,7 @@
           <p class="text-uppercase mb-2">{{range .Params.Categories}}{{. | humanize}}{{end}}</p>
           <h4 class="title-border"><a class="text-dark" href="{{.Permalink}}">{{.Title}}</a></h4>
           <p>{{.Summary}}</p>
-          <a href="{{.Permalink}}" class="btn btn-transparent">read more</a>
+          <a href="{{.Permalink}}" class="btn btn-transparent">Más</a>
         </article>
       </div>
       {{ end }}
@@ -92,7 +92,7 @@
             </ul>
             <h4 class="mb-4"><a href="{{.Permalink}}" class="text-dark">{{ .Title }}</a></h4>
             <p class="mb-0 post-summary">{{.Summary }}</p>
-            <a class="btn btn-transparent mb-4" href="{{.Permalink}}">Continue...</a>
+            <a class="btn btn-transparent mb-4" href="{{.Permalink}}">Continuar...</a>
           </div>
         </article>
       </div>
